# baker-street-221b

./: .gitignore  Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
holmesd/: Cargo.toml
holmesd/src/: engine.rs  llm.rs  main.rs
moriarty/: Cargo.toml
moriarty/src/: crimes.rs  main.rs
mycroft/: Cargo.toml
mycroft/src/: graph.rs  lib.rs
watson/: Cargo.toml
watson/src/: lib.rs  report.rs
wiggins/: Cargo.toml
wiggins/bpf/: main.rs
wiggins/src/: lib.rs
