[workspace]
members = [
    "common",
    "holmesd",
    "mycroft",
    "watson",
    "wiggins",
    "moriarty"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.3", features = ["kv-mem"] } # 内存模式，无需安装DB
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"

# 内部依赖图
common = { path = "./common" }
mycroft = { path = "./mycroft" }
watson = { path = "./watson" }
wiggins = { path = "./wiggins" }