[package]
name = "holmesd"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
mycroft = { workspace = true }
wiggins = { workspace = true }
watson = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }